--- a/android/build.gradle
+++ b/android/build.gradle
@@ -29,13 +29,6 @@ android {
 repositories {
     mavenCentral()
     google()
-    maven {
-        url "https://cardinalcommerce.bintray.com/android"
-        credentials {
-            username 'braintree-team-sdk@cardinalcommerce'
-            password '220cc9476025679c4e5c843666c27d97cfb0f951'
-        }
-    }
 }
 
 dependencies {
@@ -43,4 +36,16 @@ dependencies {
     implementation 'com.braintreepayments.api:data-collector:2.+'
     implementation 'com.braintreepayments.api:drop-in:4.+'
     implementation 'com.facebook.react:react-native:+'
+}
+
+rootProject.allprojects {
+    repositories {
+        maven {
+            url  "https://cardinalcommerce.bintray.com/android"
+            credentials {
+                username 'braintree-team-sdk@cardinalcommerce'
+                password '220cc9476025679c4e5c843666c27d97cfb0f951'
+            }
+        }
+    }
 }
